k8s/tools/opengist/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opengist
  namespace: default
  labels:
    app: opengist
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: opengist
  template:
    metadata:
      labels:
        app: opengist
    spec:
      containers:
        - name: opengist
          image: ghcr.io/thomiceli/opengist:latest
          ports:
            - name: http
              containerPort: 6157
              protocol: TCP
            - name: ssh
              containerPort: 2222
              protocol: TCP

          volumeMounts:
            - name: opengist-data
              mountPath: /opengist
              subPath: shared/opengist
              
      volumes:
        - name: opengist-data
          persistentVolumeClaim:
            claimName: opengist-data-samba
