k8s/tools/opengist/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: opengist-service
  namespace: default
  labels:
    app: opengist
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: opengist
